--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ protobuf==3.20.2; sys_platform == 'darwin' and platform_machine != 'arm64'
 protobuf==3.20.3; sys_platform == 'darwin' and platform_machine == 'arm64'
 auto-gptq==0.6.0; sys_platform != 'darwin'
 docx2txt
+python-docx
 unstructured
 unstructured[pdf]
 
